--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/noto-sans": "^4.1.0",
+    "bootstrap": "^5.0.0-beta1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-google-analytics": "^2.10.0",
