--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fontsource/noto-sans": "^4.1.0",
     "bootstrap": "^5.0.0-beta1",
+    "date-fns": "^2.16.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-google-analytics": "^2.10.0",
