--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-sharp": "^2.13.1",
     "gatsby-plugin-sitemap": "^2.11.0",
     "gatsby-remark-embed-video": "^3.0.10",
+    "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-highlight-code": "^2.1.1",
     "gatsby-remark-images": "^3.10.0",
     "gatsby-source-filesystem": "^2.10.0",
