--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@deckdeckgo/highlight-code": "^2.3.2",
     "@fontsource/noto-sans": "^4.1.0",
     "bootstrap": "^5.0.0-beta1",
+    "bootstrap-icons": "^1.3.0",
     "date-fns": "^2.16.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.10.0",
