--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^2.3.2",
     "@fontsource/noto-sans": "^4.1.0",
     "bootstrap": "^5.0.0-beta1",
+    "bootstrap-icons": "^1.3.0",
+    "date-fns": "^2.16.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-google-analytics": "^2.10.0",
@@ -25,6 +28,10 @@
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sharp": "^2.13.1",
     "gatsby-plugin-sitemap": "^2.11.0",
+    "gatsby-remark-embed-video": "^3.0.10",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-highlight-code": "^2.1.1",
+    "gatsby-remark-images": "^3.10.0",
     "gatsby-source-filesystem": "^2.10.0",
     "gatsby-transformer-remark": "^2.15.0",
     "gatsby-transformer-sharp": "^2.11.0",
