--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-highlight-code": "^2.1.1",
     "gatsby-remark-images": "^3.10.0",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
     "gatsby-source-filesystem": "^2.10.0",
     "gatsby-transformer-remark": "^2.15.0",
     "gatsby-transformer-sharp": "^2.11.0",
