--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-transformer-sharp": "^2.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "share-api-polyfill": "^1.0.20"
   }
 }
