--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.16.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.10.0",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-gtag": "^2.8.0",
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-offline": "^3.9.0",
