--- a/package.json
+++ b/package.json
@@ -24,19 +24,20 @@
     "gatsby-image": "^2.10.0",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-gtag": "^2.8.0",
+    "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-offline": "^3.9.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
-    "gatsby-plugin-sharp": "^2.13.1",
+    "gatsby-plugin-sharp": "^2.14.4",
     "gatsby-plugin-sitemap": "^2.11.0",
     "gatsby-remark-embed-video": "^3.0.10",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-highlight-code": "^2.1.1",
     "gatsby-remark-images": "^3.10.0",
     "gatsby-remark-responsive-iframe": "^2.11.0",
-    "gatsby-source-filesystem": "^2.10.0",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-remark": "^2.15.0",
-    "gatsby-transformer-sharp": "^2.11.0",
+    "gatsby-transformer-sharp": "^2.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
