--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@deckdeckgo/highlight-code": "^2.3.2",
     "@fontsource/noto-sans": "^4.1.0",
-    "bootstrap": "^5.0.0-beta1",
-    "bootstrap-icons": "^1.3.0",
-    "date-fns": "^2.16.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.0",
+    "date-fns": "^2.25.0",
     "gatsby": "^2.26.1",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-gtag": "^2.8.0",
