--- a/package.json
+++ b/package.json
@@ -15,28 +15,30 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@deckdeckgo/highlight-code": "^2.3.2",
-    "@fontsource/noto-sans": "^4.1.0",
+    "@deckdeckgo/highlight-code": "^3.5.0",
+    "@fontsource/noto-sans": "^4.5.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.0",
     "date-fns": "^2.25.0",
     "gatsby": "^4.1.4",
     "gatsby-plugin-google-adsense": "^1.1.3",
-    "gatsby-plugin-google-gtag": "^2.8.0",
-    "gatsby-plugin-image": "^1.6.0",
-    "gatsby-plugin-manifest": "^2.11.0",
-    "gatsby-plugin-offline": "^3.9.0",
-    "gatsby-plugin-react-helmet": "^3.9.0",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-plugin-sitemap": "^2.11.0",
-    "gatsby-remark-embed-video": "^3.0.10",
-    "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-highlight-code": "^2.1.1",
-    "gatsby-remark-images": "^3.10.0",
-    "gatsby-remark-responsive-iframe": "^2.11.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-remark": "^2.15.0",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-plugin-google-gtag": "^4.1.0",
+    "gatsby-plugin-image": "^2.1.2",
+    "gatsby-plugin-manifest": "^4.1.3",
+    "gatsby-plugin-offline": "^5.1.3",
+    "gatsby-plugin-postcss": "^5.1.0",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.3",
+    "gatsby-plugin-sitemap": "^5.1.1",
+    "gatsby-remark-embed-video": "^3.1.1",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-highlight-code": "^3.0.2",
+    "gatsby-remark-images": "^6.1.3",
+    "gatsby-remark-responsive-iframe": "^5.1.0",
+    "gatsby-source-filesystem": "^4.1.2",
+    "gatsby-transformer-remark": "^5.1.3",
+    "gatsby-transformer-sharp": "^4.1.0",
+    "postcss": "^8.3.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
