--- a/package.json
+++ b/package.json
@@ -1,47 +1,37 @@
 {
   "name": "kodemonk-blog",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
-  "description": "kodemonk-blog",
-  "author": "yuvaraj",
-  "keywords": [
-    "gatsby"
-  ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "optimizeimages": "node scripts/optimize-images.js"
   },
   "dependencies": {
-    "@deckdeckgo/highlight-code": "^3.5.0",
-    "@fontsource/noto-sans": "^4.5.1",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.0",
-    "date-fns": "^2.25.0",
-    "gatsby": "^4.1.4",
-    "gatsby-plugin-google-adsense": "^1.1.3",
-    "gatsby-plugin-google-gtag": "^4.1.0",
-    "gatsby-plugin-image": "^2.1.2",
-    "gatsby-plugin-manifest": "^4.1.3",
-    "gatsby-plugin-offline": "^5.1.3",
-    "gatsby-plugin-postcss": "^5.1.0",
-    "gatsby-plugin-react-helmet": "^5.1.0",
-    "gatsby-plugin-sharp": "^4.1.3",
-    "gatsby-plugin-sitemap": "^5.1.1",
-    "gatsby-remark-embed-video": "^3.1.1",
-    "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-highlight-code": "^3.0.2",
-    "gatsby-remark-images": "^6.1.3",
-    "gatsby-remark-responsive-iframe": "^5.1.0",
-    "gatsby-source-filesystem": "^4.1.2",
-    "gatsby-transformer-remark": "^5.1.3",
-    "gatsby-transformer-sharp": "^4.1.0",
-    "postcss": "^8.3.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "share-api-polyfill": "^1.0.21"
+    "@types/node": "18.16.0",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
+    "date-fns": "^2.29.3",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.1",
+    "gray-matter": "^4.0.3",
+    "next": "13.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "reading-time": "^1.5.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
+    "remark-prism": "^1.3.6",
+    "share-api-polyfill": "^1.1.1",
+    "sharp": "^0.32.1",
+    "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/remark-prism": "^1.3.4",
+    "@types/share-api-polyfill": "^1.0.3"
   }
 }
