--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "bootstrap-icons": "^1.10.4",
     "date-fns": "^2.29.3",
     "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
     "gray-matter": "^4.0.3",
-    "next": "13.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
@@ -32,6 +31,7 @@
   },
   "devDependencies": {
     "@types/remark-prism": "^1.3.4",
-    "@types/share-api-polyfill": "^1.0.3"
+    "@types/share-api-polyfill": "^1.0.3",
+    "eslint-config-next": "^13.5.3"
   }
 }
