--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/mapbox__rehype-prism": "^0.8.1",
+    "@types/mdast": "^4.0.1",
     "@types/remark-prism": "^1.3.5",
     "@types/share-api-polyfill": "^1.0.3",
     "eslint-config-next": "^13.5.3"
