--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "optimizeimages": "node scripts/optimize-images.js"
   },
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.8.0",
-    "@types/node": "18.16.0",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.4",
-    "date-fns": "^2.29.3",
-    "eslint": "8.39.0",
+    "@mapbox/rehype-prism": "^0.9.0",
+    "@next/third-parties": "^14.2.2",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.6.0",
+    "eslint": "^8.57.0",
     "gray-matter": "^4.0.3",
-    "next": "^13.5.3",
+    "next": "^14.2.2",
     "prism-themes": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,16 +29,16 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "remark-prism": "^1.3.6",
-    "remark-rehype": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "share-api-polyfill": "^1.1.1",
-    "sharp": "^0.32.1",
-    "typescript": "^5.2.2"
+    "sharp": "^0.33.3",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@types/mapbox__rehype-prism": "^0.8.1",
-    "@types/mdast": "^4.0.1",
-    "@types/remark-prism": "^1.3.5",
-    "@types/share-api-polyfill": "^1.0.3",
-    "eslint-config-next": "^13.5.3"
+    "@types/mapbox__rehype-prism": "^0.8.3",
+    "@types/mdast": "^4.0.3",
+    "@types/remark-prism": "^1.3.7",
+    "@types/share-api-polyfill": "^1.0.5",
+    "eslint-config-next": "^14.2.2"
   }
 }
